welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while ((nums.length-place-2) > 0){
        ^